# nestrs

./: .env  Cargo.toml  README.md  docker-compose.yml
src/: main.rs
src/app/: mod.rs
src/app/module/: mod.rs
src/app/module/process/: mod.rs  process_handler.rs  process_model.rs  process_repository.rs  process_router.rs  process_service.rs
src/app/module/team/: mod.rs  team_handler.rs  team_model.rs  team_repository.rs  team_routes.rs  team_service.rs
src/app/shared/database/: connection.rs  connection_mongo.rs  mod.rs
src/app/shared/error/: error_app.rs
