[package]
name = "rust_capas"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = {version = "1.0.219", features = ["derive"]}
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls","postgres","chrono","uuid"] }
uuid = {version = "1.17.0", features = ["v4","serde"]}
validator = {version = "0.20.0", features = ["derive"]}

mongodb = "2.8"
dotenv = "0.15.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] } 
